--- a/index.html
+++ b/index.html
@@ -4,8 +4,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My first ever github project</title>
+    <style>
+        .heda{
+            color:blue
+        }
+    </style>
+
 </head>
 <body>
-    
+    <div>
+        <h2 class = 'heda'> sahil is a madarchod</h2>
+    </div>
 </body>
 </html>
